# bus-check

./: .gitignore  CLAUDE.md  MONITORING.md  README.md  REPRODUCING.md  audit.md  handoff.md  pyproject.toml  run_collector.sh
.github/workflows/: collect-headways.yml  deploy.yml  update-headways.yml
notebooks/: 01_ridership_exploration.ipynb  02_headway_exploration.ipynb  03_ridership_phases_1_3.ipynb  04_ridership_without_79.ipynb  05_ridership_share.ipynb  06_did_by_phase.ipynb  07_did_staggered.ipynb  08_did_regression.ipynb
scripts/: build_route_geojson.py  collect_to_d1.py  update_headways.py  validate_algorithm.py
site/: headways.html  index.html  methodology.html  reproducibility.html  routes.geojson  style.css
src/bus_check/: config.py
src/bus_check/analysis/: headway_analysis.py  ridership_analysis.py
src/bus_check/collector/: headway_collector.py
src/bus_check/data/: bus_tracker.py  d1_client.py  db.py  gtfs.py  ridership.py
tests/: conftest.py  test_bus_tracker.py  test_collect_to_d1.py  test_config.py  test_d1_client.py  test_db.py  test_gtfs.py  test_headway_analysis.py  test_headway_collector.py  test_ridership.py  test_ridership_analysis.py  test_update_headways.py
tests/fixtures/: getvehicles_sample.json  ridership_sample.json
tests/fixtures/gtfs_sample/: calendar.txt  routes.txt  stop_times.txt  trips.txt
worker/: package.json  wrangler.toml
worker/src/: index.js
